--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             Try something fun
           </button>
         </a>
-        <img src="assets/icon.jpg" alt="Chestnut's icon" class="rounded img-thumbnail " style="width: 100px;">
+        <img src="./assets/icon.jpg" alt="Chestnut's icon" class="rounded img-thumbnail " style="width: 100px;">
 
       </div>
 
