--- a/2048.html
+++ b/2048.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>2048</title>
+  <title>Nutty 2048</title>
 
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -25,15 +25,18 @@
 
 <body>
   <div class="container">
+    <img src="assets/banner.png" alt="Chestnut's design" style="width: 100%;">
+
     <div class="heading">
-      <h1 class="title">Nutty 2048</h1>
-      <div class="scores-container">
+      <div class="scores-container" style="display: none;">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
       </div>
     </div>
 
     <div class="above-game">
+      <h1 class="title">Nutty 2048</h1>
+
       <a class="restart-button">New Game</a>
     </div>
 
@@ -79,8 +82,8 @@
 
       </div>
     </div>
-    <a class="cheat-button">Daddy please</a>
-    <a href="./index.html">Back to home</a>
+    <a class="cheat-button">Daddy Please</a>
+    <a href="/">Back to home</a>
 
   </div>
   <!-- JavaScript Bundle with Popper -->
