--- a/index.html
+++ b/index.html
@@ -16,20 +16,30 @@
 <body>
 
   <div class="container-fluid">
-    <div id="background"></div>
-    <div class="container " style="height: 100vh;">
-      <!-- <div class="w-100" style="background-image: url('assets/banner.jpg');">
-      
-      </div> -->
-      <div class="pt-5 d-flex justify-content-around">
-        <a href="2048.html">
-          <button class="btn btn-primary">
-            Try something fun
-          </button>
+    <!-- <div id="background"></div> -->
+    <div class="container d-flex flex-column justify-content-around" style="height: 100vh;">
+      <img src="assets/banner.png" alt="Chestnut's design" style="width: 100%;">
+
+      <h1 class="text-center title">
+        Nutty 2048
+      </h1>
+      <div class="d-flex justify-content-center mt-5">
+
+        <a href="2048.html" class="button">
+          Play the masterpiece
         </a>
-        <img src="./assets/icon.jpg" alt="Chestnut's icon" class="rounded img-thumbnail " style="width: 100px;">
+      </div>
+      <div class="p-5 by-area">
+        <h3 class="text-center pb-3">By:</h3>
+        <div class=" d-flex justify-content-around">
+          <img src="./assets/icon.jpg" alt="Chestnut's icon" class="rounded img-thumbnail " style="width: 100px;">
+          🌰
+          <img src="./assets/ruby.jpg" alt="Ruby's icon" class="rounded img-thumbnail " style="width: 100px;">
+        </div>
 
       </div>
+
+
 
       <!-- <img src="assets/banner.jpg" alt="Chestnut's design" class="img-fluid">
       <img src="assets/bubble-tea.JPG" alt="Chestnut's bubble tea" class="img-fluid">
