--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
       <div class="p-5 by-area">
         <h3 class="text-center pb-3">By:</h3>
         <div class=" d-flex justify-content-around">
-          <img src="assets/icon.JPG" alt="Chestnut's icon" class="rounded img-thumbnail " style="width: 100px;">
+          <img src="assets/icon.JPG" alt="Chestnut's icon" class="rounded img-thumbnail "
+            style="width: 100px; height: 100px;">
           🌰
-          <img src="assets/ruby.JPG" alt="Ruby's icon" class="rounded img-thumbnail " style="width: 100px;">
+          <img src="assets/ruby.JPG" alt="Ruby's icon" class="rounded img-thumbnail "
+            style="width: 100px; height: 100px;">
         </div>
 
       </div>
